Split Presenter and Viewer

--- a/deno.json
+++ b/deno.json
@@ -4,5 +4,13 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
+  },
+  "deploy": {
+    "project": "ef264e7b-9e15-42f3-949e-562dadb90e78",
+    "exclude": [
+      "**/node_modules"
+    ],
+    "include": [],
+    "entrypoint": "main.ts"
   }
 }
